# TSSPIM-Tsunami-and-Storm-Surge-Population-Impact-Model

./: .gitignore  AGENTS.md  CLAUDE.md  Ground Truth Data.xlsx  README.md  pyproject.toml  slides_data_sources_methodology.md
.github/workflows/: translate-readme.yml
C4-Documentation/: c4-code-configs.md  c4-code-fast-main.md  c4-code-scripts.md  c4-component.md  c4-container.md  c4-context.md
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  workflow.md
conductor/code_styleguides/: python_data.md
docs/: e2e_pipeline.md  nsi_data_dictionary.md  reflection.md  shelter_demand_pipeline.md
docs/architecture/: e2e_pipeline.md
notebooks/: shelter_demand.ipynb
research/population_impact/scripts/: 05_format_for_spreadsheet.py  06_validate_lmh.py
scripts/: duckdb_fast_pipeline.py  h3_spatial_index.py  import_nhc_by_storm.py  ml_damage_model.py  nsi_raw_to_parquet.py  slosh_to_raster.py  validate_pipeline.py
tests/: conftest.py  test_import_nhc_by_storm.py
